--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,27 @@
-spring.application.name=hi_school-api
+# Spring Boot Application Settings
+spring.application.name=community-project
+server.port=8080 # ??? ??????? ??? ??
+
+# JPA/Hibernate Configuration
+spring.jpa.hibernate.ddl-auto=update # ?? ?? ???? ??? ???? ??? ?? ????
+spring.jpa.show-sql=true            # ??? ???? SQL ?? ??
+spring.jpa.properties.hibernate.format_sql=true # SQL ?? ??? ?? ???
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect # MariaDB ?? ??
+
+# DataSource Configuration (Placeholder for local/profile-specific configuration)
+# ?? DB ?? ??? ? ??? local ??? (application-local.properties)?? ????????.
+# ? ???? ??? ??(username, password, url)? ?? ???? ????.
+# spring.datasource.url=
+# spring.datasource.username=
+# spring.datasource.password=
+# spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+
+# Active Profiles
+# ?????? ?? ? 'local' ???? ???? ?????? ??
+# ? ??? application-local.properties ??? ??? ?? DB ??? ???? ???.
+spring.profiles.active=local
+
+# Logging Configuration (Optional)
+# logging.level.com.yourcompany.community=DEBUG # ?? ??? ?? ?? ??
+# logging.level.org.hibernate.SQL=DEBUG       # Hibernate SQL ?? ??
+# logging.level.org.hibernate.type.descriptor.sql=TRACE # Hibernate SQL ???? ??
