--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,27 @@
 # Spring Boot Application Settings
 spring.application.name=community-project
-server.port=8080 # ??? ??????? ??? ??
+server.port=8080 # 백엔드 애플리케이션이 실행될 포트
 
 # JPA/Hibernate Configuration
-spring.jpa.hibernate.ddl-auto=update # ?? ?? ???? ??? ???? ??? ?? ????
-spring.jpa.show-sql=true            # ??? ???? SQL ?? ??
-spring.jpa.properties.hibernate.format_sql=true # SQL ?? ??? ?? ???
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect # MariaDB ?? ??
+spring.jpa.hibernate.ddl-auto=update # 개발 초기 단계에서 엔티티 기반으로 테이블 자동 업데이트
+spring.jpa.show-sql=true            # 콘솔에 실행되는 SQL 쿼리 출력
+spring.jpa.properties.hibernate.format_sql=true # SQL 쿼리 가독성 좋게 포맷팅
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect # MariaDB 방언 설정
 
 # DataSource Configuration (Placeholder for local/profile-specific configuration)
-# ?? DB ?? ??? ? ??? local ??? (application-local.properties)?? ????????.
-# ? ???? ??? ??(username, password, url)? ?? ???? ????.
+# 실제 DB 접속 정보는 각 팀원의 local 프로필 (application-local.properties)에서 오버라이드됩니다.
+# 이 파일에는 민감한 정보(username, password, url)를 직접 기입하지 않습니다.
 # spring.datasource.url=
 # spring.datasource.username=
 # spring.datasource.password=
 # spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 # Active Profiles
-# ?????? ?? ? 'local' ???? ???? ?????? ??
-# ? ??? application-local.properties ??? ??? ?? DB ??? ???? ???.
+# 애플리케이션 실행 시 'local' 프로필이 기본으로 활성화되도록 설정
+# 각 팀원은 application-local.properties 파일에 자신의 로컬 DB 정보를 설정해야 합니다.
 spring.profiles.active=local
 
 # Logging Configuration (Optional)
-# logging.level.com.yourcompany.community=DEBUG # ?? ??? ?? ?? ??
-# logging.level.org.hibernate.SQL=DEBUG       # Hibernate SQL ?? ??
-# logging.level.org.hibernate.type.descriptor.sql=TRACE # Hibernate SQL ???? ??
+# logging.level.com.yourcompany.community=DEBUG # 특정 패키지 로그 레벨 설정
+# logging.level.org.hibernate.SQL=DEBUG       # Hibernate SQL 쿼리 로그
+# logging.level.org.hibernate.type.descriptor.sql=TRACE # Hibernate SQL 파라미터 로그
