--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,6 +1,6 @@
 # application-local.properties (Git? ???? ??)
 spring.datasource.url=jdbc:mariadb://localhost:3306/your_community_db?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
-spring.datasource.username=user0
-spring.datasource.password=8221
+spring.datasource.username=gaengji
+spring.datasource.password=0122
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDBDialect
